--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "~1.12.0",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-barcode-scanner": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
