--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-community/masked-view": "0.1.10",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-barcode-scanner": "~9.1.0",
@@ -19,11 +20,13 @@
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
