--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "loginTOKENv2",
-    "slug": "loginTOKENv2",
+    "name": "zugoiNet",
+    "slug": "zugoiNet",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
